kubernetes/firmenai-german-website-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: firmenai-website-german
  name: firmenai-website-german
  namespace: firmenai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: firmenai-website-german
  strategy:
    type: RollingUpdate
  template:
    metadata:      
      labels:
        app: firmenai-website-german
    spec:
      # affinity:
      #   nodeAffinity:
      #     preferredDuringSchedulingIgnoredDuringExecution:
      #       - weight: 1
      #         preference:
      #           matchExpressions:
      #             - key: kubernetes.io/hostname
      #               operator: In
      #               values:
      #                 - k8smaster
      containers:
        - image: guestros/firmenai:latest-german
          imagePullPolicy: Always
          name: firmenai-website-german
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "10Mi"
              cpu: "25m"
            limits:
              memory: "1Gi"
              cpu: "1"
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 60
          startupProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
      # priorityClassName: high-priority
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: firmenai-website-german
  name: firmenai-website-german-service
  namespace: firmenai
spec:
  # type: ClusterIP
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    app: firmenai-website-german
