kubernetes/firmenai-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-firmenai
  namespace: firmenai
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/enable-cors: "true"
    # nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   more_set_headers "X-Robots-Tag: noindex, nofollow";
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # type of authentication
    # nginx.ingress.kubernetes.io/auth-type: basic
    # # name of the secret that contains the user/password definitions
    # nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # # message to display with an appropriate context why the authentication is required
    # nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - write info@datafortress.cloud if you want access'
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    # - firmenai.datafortress.cloud
    - firmenai.de
    - app.firmenai.de
    - business-ai-tools.com
    - app.business-ai-tools.com
    secretName: tls-secret
  rules:
  - host: firmenai.de # firmenai.datafortress.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: firmenai-website-german-service 
            port:
              number: 8080
  - host: app.firmenai.de # firmenai.datafortress.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: firmenai-backend
            port:
              number: 8000
  - host: business-ai-tools.com # firmenai.datafortress.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: firmenai-website-service
            port:
              number: 8080
  - host: app.business-ai-tools.com # firmenai.datafortress.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: firmenai-backend
            port:
              number: 8000
